Fix spacing around nav menu

--- a/src/styles/nav.scss
+++ b/src/styles/nav.scss
@@ -92,6 +92,10 @@ nav {
         height: 13em;
     }
 
+    & > [tabindex="-1"] {
+        display: none;
+    }
+
     ul {
         margin: 0;
         line-height: 3em;
